--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   <title>DIRT.LT - Minecraft serveris</title>
 </head>
 
-<body>
-  <div class="bg-slate-400" id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+<body class="w-screen h-screen flex flex-col justify-center items-center">
+  <div class="flex flex-col justify-center items-center">
+    <div class="text-xl">DIRT.LT</div>
+    <div class="text-sm">minecraft serveris</div>
+  </div>
+  <script type="module" src="./src/main.js"></script>
 </body>
 
 </html>
