Open download links in new tab

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="flex flex-col items-center gap-2 antialiased -rotate-2">
       <span class="font-bold text-base text-transparent bg-clip-text bg-gradient-to-br from-gray-700 to-gray-900">atsisiųsti ankstesnių sezonų žemėlapius</span>
       <div class="flex flex-row gap-2">
-        <a class="flex flex-col items-center font-medium text-sm text-white p-4 bg-gradient-to-br from-gray-700 to-gray-900 rounded-lg shadow-md transition ease-in-out hover:opacity-90" href="https://mega.nz/file/fIslgCJK#tcf4wWqLoUUdjhGuhg5UqKkC6bWtITLnuTGnEOICXG4">1 sezonas<span class="text-xs">(4.94 GB)</span></a>
-        <a class="flex flex-col items-center font-medium text-sm text-white p-4 bg-gradient-to-br from-gray-700 to-gray-900 rounded-lg shadow-md transition ease-in-out hover:opacity-90" href="https://drive.google.com/file/d/1ue6BwG_gMWln5L-cdB-O1UIq8dseZTJs/view?usp=drive_link">2 sezonas<span class="text-xs">(56.24 GB)</span></a>
+        <a class="flex flex-col items-center font-medium text-sm text-white p-4 bg-gradient-to-br from-gray-700 to-gray-900 rounded-lg shadow-md transition ease-in-out hover:opacity-90 hover:scale-95" target="_blank" href="https://mega.nz/file/fIslgCJK#tcf4wWqLoUUdjhGuhg5UqKkC6bWtITLnuTGnEOICXG4">1 sezonas<span class="text-xs">(4.94 GB)</span></a>
+        <a class="flex flex-col items-center font-medium text-sm text-white p-4 bg-gradient-to-br from-gray-700 to-gray-900 rounded-lg shadow-md transition ease-in-out hover:opacity-90 hover:scale-95" target="_blank" href="https://drive.google.com/file/d/1ue6BwG_gMWln5L-cdB-O1UIq8dseZTJs/view?usp=drive_link">2 sezonas<span class="text-xs">(56.24 GB)</span></a>
       </div>
     </div>
     <div class="flex justify-center items-center rotate-2">
